--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  text-align: center;
+  padding: 10px;
 }
 
 .App-logo {
@@ -45,4 +45,8 @@ textarea.tweet-url {
 div.photo {
   float: left;
   padding: 0.5em;
+}
+
+.tweet {
+  clear: both;
 }
